[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/TheWitch/Idle.png" type="Texture" id=3]
[ext_resource path="res://src/Enemies/TheWitch/TheWitch.gd" type="Script" id=4]
[ext_resource path="res://Assets/Enemies/TheWitch/Cast.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/TheWitch/FlyUp.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/TheWitch/FlyDown.png" type="Texture" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool white;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	
	if(white){
		COLOR = vec4 (0.85, 0.85, 0.85, color.a)
	}else{
		COLOR = color;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/white = null

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "FlyUp",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "FlyDown",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Cast",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 62.1571, 64.4029 )

[node name="TheWitch" type="KinematicBody2D" groups=[
"Enemies",
"TheWitch",
]]
collision_layer = 8
collision_mask = 5
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -67.9997 )
frames = SubResource( 12 )
animation = "FlyDown"
playing = true

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -68.7975 )
shape = SubResource( 13 )

[node name="EnemyStats" parent="." instance=ExtResource( 2 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="HurtBox"]
